# intelligent-refactor

./: .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf  test_workflow.py
backend/: config.py  main.py  pyproject.toml
backend/agents/: analyzer.py  code_rewrite_node.py  llm_client.py  planner.py  refactorer.py  schemas.py  state.py  validator.py  workflow.py
backend/api/: routes.py  websocket.py
backend/db/: models.py  session.py
backend/middleware/: chain.py
backend/rpc/: client.py
backend/sandbox/: git_manager.py  provider.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
rewrite-engine/: package-lock.json  package.json
rewrite-engine/src/: analyzer.ts  astManager.ts  index.ts  refactorExecutor.ts  semanticResolver.ts
rewrite-engine/src/engine/: executor.ts  semantic-resolver.ts  transform-context.ts  unified-parser.ts
rewrite-engine/src/transforms/: extract-component.ts  extract-function.ts  rename-symbol.ts
schemas/: analysis-report.schema.json  refactor-ir.schema.json  rpc-messages.schema.json  validation-result.schema.json
